its very hard to see the logo, something aint right but im too lazy to fix it so its not getting fixed :D

--- a/css/bar.css
+++ b/css/bar.css
@@ -38,7 +38,7 @@
 
     --progress-bar-border: #000000;
 
-    --names-color: rgb(255, 255, 255);
+    --names-color: rgb(0, 0, 0);
 }
 
 /* DO NOT EDIT BELOW THIS TEXT (UNLESS YOU KNOW WHAT YOU'RE DOING) */
